probQparser/parser.out
Created by PLY version 3.7 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    FLAG
    EVIDENCE
    B_ACTION
    PICK
    BUCKET
    ACTION
    E_ACTION
    FRACTION

Grammar

Rule 0     S' -> program
Rule 1     program -> program statement
Rule 2     program -> statement
Rule 3     statement -> entity_def
Rule 4     statement -> entity_action
Rule 5     statement -> query_wrap
Rule 6     entity_def -> ENTITY IDEN ed_params ed_feature
Rule 7     ed_params -> LEFTSQRBRACKET alias_list RIGHTSQRBRACKET
Rule 8     alias_list -> alias_list COMMA ALIAS ASSIGNMENT FLOAT
Rule 9     alias_list -> alias_list COMMA ALIAS
Rule 10    alias_list -> ALIAS ASSIGNMENT FLOAT
Rule 11    alias_list -> ALIAS
Rule 12    ed_feature -> LEFTSMALLBRACKET ed_feature_inner RIGHTSMALLBRACKET
Rule 13    ed_feature_inner -> entity_prop_prob
Rule 14    entity_prop_prob -> entity_prop_prob SEMICOLON entity_prop_prob_atom
Rule 15    entity_prop_prob -> entity_prop_prob_atom
Rule 16    entity_prop_prob_atom -> ALIAS DOUBLECOLON IDEN
Rule 17    entity_prop_prob_atom -> ALIAS DOUBLECOLON NUMBER
Rule 18    entity_initialize -> IDEN ei_params ei_number
Rule 19    empty -> <empty>
Rule 20    ei_params -> LEFTSMALLBRACKET float_list ei_flag_option RIGHTSMALLBRACKET
Rule 21    ei_params -> empty
Rule 22    float_list -> float_list COMMA FLOAT
Rule 23    float_list -> float_list COMMA NUMBER
Rule 24    float_list -> FLOAT
Rule 25    float_list -> NUMBER
Rule 26    ei_flag_option -> BAR IDEN
Rule 27    ei_flag_option -> empty
Rule 28    ei_number -> LEFTCURLYBRACE NUMBER RIGHTCURLYBRACE
Rule 29    entity_action -> ALIAS ASSIGNMENT entity_initialize DOT ROLL LEFTSMALLBRACKET option_number RIGHTSMALLBRACKET
Rule 30    option_number -> NUMBER
Rule 31    option_number -> empty
Rule 32    query_wrap -> QUERY LEFTSMALLBRACKET q_expr RIGHTSMALLBRACKET
Rule 33    q_expr -> q_term_list OR q_term
Rule 34    q_expr -> q_term
Rule 35    q_term -> q_factor_list AND q_factor
Rule 36    q_term -> q_factor
Rule 37    q_term_list -> q_term_list OR q_term
Rule 38    q_term_list -> q_term
Rule 39    q_factor -> q_atom
Rule 40    q_factor -> NOT q_factor
Rule 41    q_factor -> LEFTSMALLBRACKET q_expr RIGHTSMALLBRACKET
Rule 42    q_factor_list -> q_factor_list AND q_factor
Rule 43    q_factor_list -> q_factor
Rule 44    q_atom -> q_equal_atom_3
Rule 45    q_atom -> q_equal_atom_2
Rule 46    q_atom -> me_atom
Rule 47    q_equal_atom_3 -> q_iden_3 LEFTSMALLBRACKET NUMBER COMMA q_alias_concat_wrap COMMA IDEN RIGHTSMALLBRACKET
Rule 48    q_equal_atom_3 -> q_iden_3 LEFTSMALLBRACKET NUMBER COMMA q_alias_concat_wrap COMMA NUMBER RIGHTSMALLBRACKET
Rule 49    q_equal_atom_2 -> q_iden_2 LEFTSMALLBRACKET q_alias_concat_wrap COMMA IDEN RIGHTSMALLBRACKET
Rule 50    q_equal_atom_2 -> q_iden_2 LEFTSMALLBRACKET q_alias_concat_wrap COMMA NUMBER RIGHTSMALLBRACKET
Rule 51    q_iden_3 -> EQUALATMOST
Rule 52    q_iden_3 -> EQUALATLEAST
Rule 53    q_iden_3 -> EQUALFEW
Rule 54    q_iden_2 -> EQUALALL
Rule 55    q_iden_2 -> EQUALANY
Rule 56    q_alias_concat_wrap -> alias_slice
Rule 57    q_alias_concat_wrap -> LEFTSQRBRACKET q_alias_concat RIGHTSQRBRACKET
Rule 58    q_alias_concat -> q_alias_concat BAR alias_slice
Rule 59    q_alias_concat -> alias_slice
Rule 60    alias_slice -> ALIAS
Rule 61    alias_slice -> ALIAS LEFTSQRBRACKET NUMBER COLON NUMBER RIGHTSQRBRACKET
Rule 62    me_atom -> a_expression_atom
Rule 63    a_expression_atom -> a_expression EQUAL a_expression
Rule 64    a_expression_atom -> a_expression NOTEQUAL a_expression
Rule 65    a_expression_atom -> a_expression GREATEREQUAL a_expression
Rule 66    a_expression_atom -> a_expression GREATER a_expression
Rule 67    a_expression_atom -> a_expression LESSEQUAL a_expression
Rule 68    a_expression_atom -> a_expression LESS a_expression
Rule 69    a_expression -> a_expression PLUS a_term
Rule 70    a_expression -> a_expression MINUS a_term
Rule 71    a_expression -> a_term
Rule 72    a_term -> a_term TIMES a_factor
Rule 73    a_term -> a_term DIVIDE a_factor
Rule 74    a_term -> a_factor
Rule 75    a_factor -> NUMBER
Rule 76    a_factor -> ALIAS LEFTSQRBRACKET NUMBER RIGHTSQRBRACKET
Rule 77    a_factor -> LEFTSMALLBRACKET a_expression RIGHTSMALLBRACKET

Terminals, with rules where they appear

ACTION               : 
ALIAS                : 8 9 10 11 16 17 29 60 61 76
AND                  : 35 42
ASSIGNMENT           : 8 10 29
BAR                  : 26 58
BUCKET               : 
B_ACTION             : 
COLON                : 61
COMMA                : 8 9 22 23 47 47 48 48 49 50
COMMENT              : 
DIVIDE               : 73
DOT                  : 29
DOUBLECOLON          : 16 17
ENTITY               : 6
EQUAL                : 63
EQUALALL             : 54
EQUALANY             : 55
EQUALATLEAST         : 52
EQUALATMOST          : 51
EQUALFEW             : 53
EVIDENCE             : 
E_ACTION             : 
FLAG                 : 
FLOAT                : 8 10 22 24
FRACTION             : 
GREATER              : 66
GREATEREQUAL         : 65
IDEN                 : 6 16 18 26 47 49
LEFTCURLYBRACE       : 28
LEFTSMALLBRACKET     : 12 20 29 32 41 47 48 49 50 77
LEFTSQRBRACKET       : 7 57 61 76
LESS                 : 68
LESSEQUAL            : 67
MINUS                : 70
NOT                  : 40
NOTEQUAL             : 64
NUMBER               : 17 23 25 28 30 47 48 48 50 61 61 75 76
OR                   : 33 37
PICK                 : 
PLUS                 : 69
QUERY                : 32
RIGHTCURLYBRACE      : 28
RIGHTSMALLBRACKET    : 12 20 29 32 41 47 48 49 50 77
RIGHTSQRBRACKET      : 7 57 61 76
ROLL                 : 29
SEMICOLON            : 14
TIMES                : 72
error                : 

Nonterminals, with rules where they appear

a_expression         : 63 63 64 64 65 65 66 66 67 67 68 68 69 70 77
a_expression_atom    : 62
a_factor             : 72 73 74
a_term               : 69 70 71 72 73
alias_list           : 7 8 9
alias_slice          : 56 58 59
ed_feature           : 6
ed_feature_inner     : 12
ed_params            : 6
ei_flag_option       : 20
ei_number            : 18
ei_params            : 18
empty                : 21 27 31
entity_action        : 4
entity_def           : 3
entity_initialize    : 29
entity_prop_prob     : 13 14
entity_prop_prob_atom : 14 15
float_list           : 20 22 23
me_atom              : 46
option_number        : 29
program              : 1 0
q_alias_concat       : 57 58
q_alias_concat_wrap  : 47 48 49 50
q_atom               : 39
q_equal_atom_2       : 45
q_equal_atom_3       : 44
q_expr               : 32 41
q_factor             : 35 36 40 42 43
q_factor_list        : 35 42
q_iden_2             : 49 50
q_iden_3             : 47 48
q_term               : 33 34 37 38
q_term_list          : 33 37
query_wrap           : 5
statement            : 1 2

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . program statement
    (2) program -> . statement
    (3) statement -> . entity_def
    (4) statement -> . entity_action
    (5) statement -> . query_wrap
    (6) entity_def -> . ENTITY IDEN ed_params ed_feature
    (29) entity_action -> . ALIAS ASSIGNMENT entity_initialize DOT ROLL LEFTSMALLBRACKET option_number RIGHTSMALLBRACKET
    (32) query_wrap -> . QUERY LEFTSMALLBRACKET q_expr RIGHTSMALLBRACKET

    ENTITY          shift and go to state 4
    ALIAS           shift and go to state 8
    QUERY           shift and go to state 3

    program                        shift and go to state 2
    entity_action                  shift and go to state 5
    statement                      shift and go to state 6
    entity_def                     shift and go to state 7
    query_wrap                     shift and go to state 1

state 1

    (5) statement -> query_wrap .

    ENTITY          reduce using rule 5 (statement -> query_wrap .)
    ALIAS           reduce using rule 5 (statement -> query_wrap .)
    QUERY           reduce using rule 5 (statement -> query_wrap .)
    $end            reduce using rule 5 (statement -> query_wrap .)


state 2

    (0) S' -> program .
    (1) program -> program . statement
    (3) statement -> . entity_def
    (4) statement -> . entity_action
    (5) statement -> . query_wrap
    (6) entity_def -> . ENTITY IDEN ed_params ed_feature
    (29) entity_action -> . ALIAS ASSIGNMENT entity_initialize DOT ROLL LEFTSMALLBRACKET option_number RIGHTSMALLBRACKET
    (32) query_wrap -> . QUERY LEFTSMALLBRACKET q_expr RIGHTSMALLBRACKET

    ENTITY          shift and go to state 4
    ALIAS           shift and go to state 8
    QUERY           shift and go to state 3

    entity_action                  shift and go to state 5
    statement                      shift and go to state 9
    entity_def                     shift and go to state 7
    query_wrap                     shift and go to state 1

state 3

    (32) query_wrap -> QUERY . LEFTSMALLBRACKET q_expr RIGHTSMALLBRACKET

    LEFTSMALLBRACKET shift and go to state 10


state 4

    (6) entity_def -> ENTITY . IDEN ed_params ed_feature

    IDEN            shift and go to state 11


state 5

    (4) statement -> entity_action .

    ENTITY          reduce using rule 4 (statement -> entity_action .)
    ALIAS           reduce using rule 4 (statement -> entity_action .)
    QUERY           reduce using rule 4 (statement -> entity_action .)
    $end            reduce using rule 4 (statement -> entity_action .)


state 6

    (2) program -> statement .

    ENTITY          reduce using rule 2 (program -> statement .)
    ALIAS           reduce using rule 2 (program -> statement .)
    QUERY           reduce using rule 2 (program -> statement .)
    $end            reduce using rule 2 (program -> statement .)


state 7

    (3) statement -> entity_def .

    ENTITY          reduce using rule 3 (statement -> entity_def .)
    ALIAS           reduce using rule 3 (statement -> entity_def .)
    QUERY           reduce using rule 3 (statement -> entity_def .)
    $end            reduce using rule 3 (statement -> entity_def .)


state 8

    (29) entity_action -> ALIAS . ASSIGNMENT entity_initialize DOT ROLL LEFTSMALLBRACKET option_number RIGHTSMALLBRACKET

    ASSIGNMENT      shift and go to state 12


state 9

    (1) program -> program statement .

    ENTITY          reduce using rule 1 (program -> program statement .)
    ALIAS           reduce using rule 1 (program -> program statement .)
    QUERY           reduce using rule 1 (program -> program statement .)
    $end            reduce using rule 1 (program -> program statement .)


state 10

    (32) query_wrap -> QUERY LEFTSMALLBRACKET . q_expr RIGHTSMALLBRACKET
    (33) q_expr -> . q_term_list OR q_term
    (34) q_expr -> . q_term
    (37) q_term_list -> . q_term_list OR q_term
    (38) q_term_list -> . q_term
    (35) q_term -> . q_factor_list AND q_factor
    (36) q_term -> . q_factor
    (42) q_factor_list -> . q_factor_list AND q_factor
    (43) q_factor_list -> . q_factor
    (39) q_factor -> . q_atom
    (40) q_factor -> . NOT q_factor
    (41) q_factor -> . LEFTSMALLBRACKET q_expr RIGHTSMALLBRACKET
    (44) q_atom -> . q_equal_atom_3
    (45) q_atom -> . q_equal_atom_2
    (46) q_atom -> . me_atom
    (47) q_equal_atom_3 -> . q_iden_3 LEFTSMALLBRACKET NUMBER COMMA q_alias_concat_wrap COMMA IDEN RIGHTSMALLBRACKET
    (48) q_equal_atom_3 -> . q_iden_3 LEFTSMALLBRACKET NUMBER COMMA q_alias_concat_wrap COMMA NUMBER RIGHTSMALLBRACKET
    (49) q_equal_atom_2 -> . q_iden_2 LEFTSMALLBRACKET q_alias_concat_wrap COMMA IDEN RIGHTSMALLBRACKET
    (50) q_equal_atom_2 -> . q_iden_2 LEFTSMALLBRACKET q_alias_concat_wrap COMMA NUMBER RIGHTSMALLBRACKET
    (62) me_atom -> . a_expression_atom
    (51) q_iden_3 -> . EQUALATMOST
    (52) q_iden_3 -> . EQUALATLEAST
    (53) q_iden_3 -> . EQUALFEW
    (54) q_iden_2 -> . EQUALALL
    (55) q_iden_2 -> . EQUALANY
    (63) a_expression_atom -> . a_expression EQUAL a_expression
    (64) a_expression_atom -> . a_expression NOTEQUAL a_expression
    (65) a_expression_atom -> . a_expression GREATEREQUAL a_expression
    (66) a_expression_atom -> . a_expression GREATER a_expression
    (67) a_expression_atom -> . a_expression LESSEQUAL a_expression
    (68) a_expression_atom -> . a_expression LESS a_expression
    (69) a_expression -> . a_expression PLUS a_term
    (70) a_expression -> . a_expression MINUS a_term
    (71) a_expression -> . a_term
    (72) a_term -> . a_term TIMES a_factor
    (73) a_term -> . a_term DIVIDE a_factor
    (74) a_term -> . a_factor
    (75) a_factor -> . NUMBER
    (76) a_factor -> . ALIAS LEFTSQRBRACKET NUMBER RIGHTSQRBRACKET
    (77) a_factor -> . LEFTSMALLBRACKET a_expression RIGHTSMALLBRACKET

    NOT             shift and go to state 18
    LEFTSMALLBRACKET shift and go to state 30
    EQUALATMOST     shift and go to state 32
    EQUALATLEAST    shift and go to state 36
    EQUALFEW        shift and go to state 34
    EQUALALL        shift and go to state 23
    EQUALANY        shift and go to state 19
    NUMBER          shift and go to state 33
    ALIAS           shift and go to state 14

    a_term                         shift and go to state 13
    me_atom                        shift and go to state 24
    q_iden_3                       shift and go to state 25
    q_equal_atom_3                 shift and go to state 16
    q_factor_list                  shift and go to state 15
    q_atom                         shift and go to state 27
    q_factor                       shift and go to state 28
    q_equal_atom_2                 shift and go to state 29
    q_expr                         shift and go to state 17
    a_expression_atom              shift and go to state 20
    q_term                         shift and go to state 31
    a_factor                       shift and go to state 21
    q_iden_2                       shift and go to state 22
    a_expression                   shift and go to state 26
    q_term_list                    shift and go to state 35

state 11

    (6) entity_def -> ENTITY IDEN . ed_params ed_feature
    (7) ed_params -> . LEFTSQRBRACKET alias_list RIGHTSQRBRACKET

    LEFTSQRBRACKET  shift and go to state 37

    ed_params                      shift and go to state 38

state 12

    (29) entity_action -> ALIAS ASSIGNMENT . entity_initialize DOT ROLL LEFTSMALLBRACKET option_number RIGHTSMALLBRACKET
    (18) entity_initialize -> . IDEN ei_params ei_number

    IDEN            shift and go to state 39

    entity_initialize              shift and go to state 40

state 13

    (71) a_expression -> a_term .
    (72) a_term -> a_term . TIMES a_factor
    (73) a_term -> a_term . DIVIDE a_factor

    PLUS            reduce using rule 71 (a_expression -> a_term .)
    MINUS           reduce using rule 71 (a_expression -> a_term .)
    RIGHTSMALLBRACKET reduce using rule 71 (a_expression -> a_term .)
    OR              reduce using rule 71 (a_expression -> a_term .)
    AND             reduce using rule 71 (a_expression -> a_term .)
    EQUAL           reduce using rule 71 (a_expression -> a_term .)
    NOTEQUAL        reduce using rule 71 (a_expression -> a_term .)
    GREATEREQUAL    reduce using rule 71 (a_expression -> a_term .)
    GREATER         reduce using rule 71 (a_expression -> a_term .)
    LESSEQUAL       reduce using rule 71 (a_expression -> a_term .)
    LESS            reduce using rule 71 (a_expression -> a_term .)
    TIMES           shift and go to state 41
    DIVIDE          shift and go to state 42


state 14

    (76) a_factor -> ALIAS . LEFTSQRBRACKET NUMBER RIGHTSQRBRACKET

    LEFTSQRBRACKET  shift and go to state 43


state 15

    (35) q_term -> q_factor_list . AND q_factor
    (42) q_factor_list -> q_factor_list . AND q_factor

    AND             shift and go to state 44


state 16

    (44) q_atom -> q_equal_atom_3 .

    RIGHTSMALLBRACKET reduce using rule 44 (q_atom -> q_equal_atom_3 .)
    OR              reduce using rule 44 (q_atom -> q_equal_atom_3 .)
    AND             reduce using rule 44 (q_atom -> q_equal_atom_3 .)


state 17

    (32) query_wrap -> QUERY LEFTSMALLBRACKET q_expr . RIGHTSMALLBRACKET

    RIGHTSMALLBRACKET shift and go to state 45


state 18

    (40) q_factor -> NOT . q_factor
    (39) q_factor -> . q_atom
    (40) q_factor -> . NOT q_factor
    (41) q_factor -> . LEFTSMALLBRACKET q_expr RIGHTSMALLBRACKET
    (44) q_atom -> . q_equal_atom_3
    (45) q_atom -> . q_equal_atom_2
    (46) q_atom -> . me_atom
    (47) q_equal_atom_3 -> . q_iden_3 LEFTSMALLBRACKET NUMBER COMMA q_alias_concat_wrap COMMA IDEN RIGHTSMALLBRACKET
    (48) q_equal_atom_3 -> . q_iden_3 LEFTSMALLBRACKET NUMBER COMMA q_alias_concat_wrap COMMA NUMBER RIGHTSMALLBRACKET
    (49) q_equal_atom_2 -> . q_iden_2 LEFTSMALLBRACKET q_alias_concat_wrap COMMA IDEN RIGHTSMALLBRACKET
    (50) q_equal_atom_2 -> . q_iden_2 LEFTSMALLBRACKET q_alias_concat_wrap COMMA NUMBER RIGHTSMALLBRACKET
    (62) me_atom -> . a_expression_atom
    (51) q_iden_3 -> . EQUALATMOST
    (52) q_iden_3 -> . EQUALATLEAST
    (53) q_iden_3 -> . EQUALFEW
    (54) q_iden_2 -> . EQUALALL
    (55) q_iden_2 -> . EQUALANY
    (63) a_expression_atom -> . a_expression EQUAL a_expression
    (64) a_expression_atom -> . a_expression NOTEQUAL a_expression
    (65) a_expression_atom -> . a_expression GREATEREQUAL a_expression
    (66) a_expression_atom -> . a_expression GREATER a_expression
    (67) a_expression_atom -> . a_expression LESSEQUAL a_expression
    (68) a_expression_atom -> . a_expression LESS a_expression
    (69) a_expression -> . a_expression PLUS a_term
    (70) a_expression -> . a_expression MINUS a_term
    (71) a_expression -> . a_term
    (72) a_term -> . a_term TIMES a_factor
    (73) a_term -> . a_term DIVIDE a_factor
    (74) a_term -> . a_factor
    (75) a_factor -> . NUMBER
    (76) a_factor -> . ALIAS LEFTSQRBRACKET NUMBER RIGHTSQRBRACKET
    (77) a_factor -> . LEFTSMALLBRACKET a_expression RIGHTSMALLBRACKET
